dataverse-kompose/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: postgresql
    spec:
      containers:
        - env:
            - name: DATAVERSE_DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: DATAVERSE_DB_HOST
                  name: env
            - name: DATAVERSE_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: DATAVERSE_DB_NAME
                  name: env
            - name: DATAVERSE_DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DATAVERSE_DB_PASSWORD
                  name: env
            - name: DATAVERSE_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: DATAVERSE_DB_USER
                  name: env
            - name: DATAVERSE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATAVERSE_URL
                  name: env
            - name: POSTGRES_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DATABASE
                  name: env
            - name: POSTGRES_DB
              value: dataverse
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_SERVER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_SERVER
                  name: env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env
            - name: SOLR_SERVICE_HOST
              valueFrom:
                configMapKeyRef:
                  key: SOLR_SERVICE_HOST
                  name: env
            - name: SOLR_SERVICE_PORT
              valueFrom:
                configMapKeyRef:
                  key: SOLR_SERVICE_PORT
                  name: env
          image: library/postgres:10.13
          name: postgresql
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
