dataverse-kompose/dataverse-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dataverse
  name: dataverse
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "4848"
    port: 4848
    targetPort: 4848
  selector:
    io.kompose.service: dataverse
status:
  loadBalancer: {}
