dataverse-kompose/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  ports:
  - name: "8983"
    port: 8983
    targetPort: 8983
  selector:
    io.kompose.service: solr
status:
  loadBalancer: {}
